force-app/main/default/objects/Property__c/fields/MS_Pincode__c.field-meta.xml
<CustomField>
    <fullName>MS_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MS Pincode</label>
    <referenceTo>MS_Pincode__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>