force-app/main/default/objects/Property__c/fields/No_of_boundaries_without_name_having__c.field-meta.xml
<CustomField>
    <fullName>No_of_boundaries_without_name_having__c</fullName>
    <label>N ofboundaries withoutname &amp; SN/KN/PN/KN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>