force-app/main/default/objects/Property__c/fields/North_by__c.field-meta.xml
<CustomField>
    <fullName>North_by__c</fullName>
    <label>North by</label>
    <length>80</length>
    <type>Text</type>
</CustomField>