force-app/main/default/objects/Property__c/fields/North_by_land_measurements__c.field-meta.xml
<CustomField>
    <fullName>North_by_land_measurements__c</fullName>
    <label>North By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>