force-app/main/default/objects/Property__c/fields/North_By_Land_Physical__c.field-meta.xml
<CustomField>
    <fullName>North_By_Land_Physical__c</fullName>
    <label>North By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>