force-app/main/default/objects/Property__c/fields/Online_EC_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Online_EC_Date_From__c</fullName>
    <label>Online EC Date From</label>
    <type>Date</type>
</CustomField>