force-app/main/default/objects/Property__c/fields/Online_EC_Date_Till__c.field-meta.xml
<CustomField>
    <fullName>Online_EC_Date_Till__c</fullName>
    <label>Online EC Date Till</label>
    <type>Date</type>
</CustomField>