force-app/main/default/objects/Property__c/fields/Online_EC_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_EC_Status__c</fullName>
    <label>Online EC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Website Down</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>