force-app/main/default/objects/Property__c/fields/Online_Guideline_Value_Search__c.field-meta.xml
<CustomField>
    <fullName>Online_Guideline_Value_Search__c</fullName>
    <label>Online Guideline Value Search</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Website Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>