force-app/main/default/objects/Property__c/fields/Online_Guidelive_Value__c.field-meta.xml
<CustomField>
    <fullName>Online_Guidelive_Value__c</fullName>
    <label>Online Guidelive Value</label>
    <length>6</length>
    <type>Text</type>
</CustomField>