force-app/main/default/objects/Property__c/fields/Onwership_Date__c.field-meta.xml
<CustomField>
    <fullName>Onwership_Date__c</fullName>
    <label>Onwership Date</label>
    <type>Date</type>
</CustomField>