force-app/main/default/objects/Property__c/fields/Original_Mortgage_Document__c.field-meta.xml
<CustomField>
    <fullName>Original_Mortgage_Document__c</fullName>
    <label>Original Mortgage Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>