force-app/main/default/objects/Property__c/fields/Overall_Land_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_Land_Remarks__c</fullName>
    <label>Overall Land Remarks</label>
    <type>TextArea</type>
</CustomField>