force-app/main/default/objects/Property__c/fields/Overall_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks__c</fullName>
    <label>Overall Remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>