force-app/main/default/objects/Property__c/fields/Ownership_Date__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Date__c</fullName>
    <label>Ownership Date</label>
    <type>Date</type>
</CustomField>