force-app/main/default/objects/Property__c/fields/Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Status__c</fullName>
    <label>Ownership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>