force-app/main/default/objects/Property__c/fields/Pathway_Available__c.field-meta.xml
<CustomField>
    <fullName>Pathway_Available__c</fullName>
    <label>Pathway Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>