force-app/main/default/objects/Property__c/fields/Percent_Share__c.field-meta.xml
<CustomField>
    <fullName>Percent_Share__c</fullName>
    <label>Percent Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>