force-app/main/default/objects/Property__c/fields/Person_residing_at_Mortgage_property__c.field-meta.xml
<CustomField>
    <fullName>Person_residing_at_Mortgage_property__c</fullName>
    <label>Person Residing At Mortgage Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Blood relative</fullName>
            </value>
            <value>
                <fullName>Other relatives</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
                <isActive>false</isActive>
                <label>Relative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>