force-app/main/default/objects/Property__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>MS_Pincode__c</referenceTo>
    <relationshipLabel>Properties (Pincode)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>