force-app/main/default/objects/Property__c/fields/Property_Detail_AC_Check__c.field-meta.xml
<CustomField>
    <fullName>Property_Detail_AC_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in PC/AC</description>
    <label>Property Detail AC Check</label>
    <type>Checkbox</type>
</CustomField>