force-app/main/default/objects/Property__c/fields/Property_Identified__c.field-meta.xml
<CustomField>
    <fullName>Property_Identified__c</fullName>
    <label>Property Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>