force-app/main/default/objects/Property__c/fields/Property_Location_Classification__c.field-meta.xml
<CustomField>
    <fullName>Property_Location_Classification__c</fullName>
    <label>Property Location / Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Semi Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>