force-app/main/default/objects/Property__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Loan_Applicant__r.Customer_Information__c ,  Loan_Applicant__r.Customer_Information__r.FirstName + 
&apos; &apos;+Loan_Applicant__r.Customer_Information__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Owner</label>
    <type>Text</type>
</CustomField>