force-app/main/default/objects/Property__c/fields/Property_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Property_Ownership__c</fullName>
    <label>Property Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Acquired</fullName>
            </value>
            <value>
                <fullName>Ancestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>