force-app/main/default/objects/Property__c/fields/Property_Purchased_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Purchased_Type__c</fullName>
    <label>Property Purchased Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>