force-app/main/default/objects/Property__c/fields/Property_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Property_Purpose__c</fullName>
    <label>Property Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Occupied</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Multi Tenanted</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>