force-app/main/default/objects/Property__c/fields/Property_Surrounding__c.field-meta.xml
<CustomField>
    <fullName>Property_Surrounding__c</fullName>
    <label>Property Surrounding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>