force-app/main/default/objects/Property__c/fields/Proposed_Area__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Area__c</fullName>
    <label>Proposed Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>