force-app/main/default/objects/Property__c/fields/Remarks_land_measurements__c.field-meta.xml
<CustomField>
    <fullName>Remarks_land_measurements__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>