force-app/main/default/objects/Property__c/fields/Residual_Age_Of_Property__c.field-meta.xml
<CustomField>
    <fullName>Residual_Age_Of_Property__c</fullName>
    <label>Residual Age Of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5 Years</fullName>
            </value>
            <value>
                <fullName>5 to 15 Years</fullName>
            </value>
            <value>
                <fullName>15 to 25 Years</fullName>
            </value>
            <value>
                <fullName>25 to 40 Years</fullName>
            </value>
            <value>
                <fullName>More than 40 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>