force-app/main/default/objects/Property__c/fields/SD_Date__c.field-meta.xml
<CustomField>
    <fullName>SD_Date__c</fullName>
    <label>SD Date</label>
    <type>Date</type>
</CustomField>