force-app/main/default/objects/Property__c/fields/South_by__c.field-meta.xml
<CustomField>
    <fullName>South_by__c</fullName>
    <label>South by</label>
    <length>80</length>
    <type>Text</type>
</CustomField>