force-app/main/default/objects/Property__c/fields/South_By_Boundaries_Physical__c.field-meta.xml
<CustomField>
    <fullName>South_By_Boundaries_Physical__c</fullName>
    <label>South By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>