force-app/main/default/objects/Property__c/fields/South_by_land_measurements__c.field-meta.xml
<CustomField>
    <fullName>South_by_land_measurements__c</fullName>
    <label>South By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>