force-app/main/default/objects/Property__c/fields/Sub_Registrar_Office__c.field-meta.xml
<CustomField>
    <fullName>Sub_Registrar_Office__c</fullName>
    <label>Sub Registrar Office</label>
    <length>80</length>
    <type>Text</type>
</CustomField>