force-app/main/default/objects/Property__c/fields/Supporting_Document_SD__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_SD__c</fullName>
    <label>Supporting Document (SD)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Adangal</fullName>
            </value>
            <value>
                <fullName>Chitta</fullName>
            </value>
            <value>
                <fullName>EB</fullName>
            </value>
            <value>
                <fullName>Form B</fullName>
            </value>
            <value>
                <fullName>Form B1</fullName>
            </value>
            <value>
                <fullName>Form P2</fullName>
            </value>
            <value>
                <fullName>House Tax</fullName>
            </value>
            <value>
                <fullName>Khasra</fullName>
            </value>
            <value>
                <fullName>Khata</fullName>
            </value>
            <value>
                <fullName>Krin Pustika</fullName>
            </value>
            <value>
                <fullName>Namuna 8</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>patta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>