force-app/main/default/objects/Property__c/fields/Survey_Number__c.field-meta.xml
<CustomField>
    <fullName>Survey_Number__c</fullName>
    <label>Survey Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>