force-app/main/default/objects/Property__c/fields/System_computed_distance__c.field-meta.xml
<CustomField>
    <fullName>System_computed_distance__c</fullName>
    <label>System Computed Distance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>