force-app/main/default/objects/Property__c/fields/Title_Deed_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Date__c</fullName>
    <label>Title Deed Date</label>
    <type>Date</type>
</CustomField>