force-app/main/default/objects/Property__c/fields/Title_Deed_Type__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Type__c</fullName>
    <label>Title Deed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale Deed</fullName>
            </value>
            <value>
                <fullName>Settlement or Gift or Consent Deed</fullName>
            </value>
            <value>
                <fullName>Partition Deed</fullName>
            </value>
            <value>
                <fullName>Release Deed</fullName>
            </value>
            <value>
                <fullName>Co-ownership Deed</fullName>
                <isActive>false</isActive>
                <label>Co-ownership Deed</label>
            </value>
            <value>
                <fullName>Gift Deed</fullName>
                <isActive>false</isActive>
                <label>Gift Deed</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Settlement Deed</fullName>
                <isActive>false</isActive>
                <label>Settlement Deed</label>
            </value>
            <value>
                <fullName>Will</fullName>
                <isActive>false</isActive>
                <label>Will</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>