force-app/main/default/objects/Property__c/fields/Title_Deed_Year__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Year__c</fullName>
    <label>Title Deed Year</label>
    <length>80</length>
    <type>Text</type>
</CustomField>