force-app/main/default/objects/Property__c/fields/Title_Document_date__c.field-meta.xml
<CustomField>
    <fullName>Title_Document_date__c</fullName>
    <label>Title Document date</label>
    <type>Date</type>
</CustomField>