force-app/main/default/objects/Property__c/fields/Title_Document_in_Name_of__c.field-meta.xml
<CustomField>
    <fullName>Title_Document_in_Name_of__c</fullName>
    <label>Title Document In Name Of</label>
    <length>200</length>
    <type>Text</type>
</CustomField>