force-app/main/default/objects/Property__c/fields/Total_Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Collateral_Value__c</fullName>
    <formula>Building_area_total_value__c + Valuation_Final_land_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Collateral Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>