force-app/main/default/objects/Property__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <formula>( Land_Area_Sq_Ft__c  *    Value_per_sq_ft__c ) + (   Building_Area_Sq_Ft__c *  Building_Value_per_Sq_ft__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>