force-app/main/default/objects/Property__c/fields/Type_Of_Property__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Property__c</fullName>
    <label>Type Of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>