force-app/main/default/objects/Property__c/fields/Valuation_Final_land_value__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Final_land_value__c</fullName>
    <formula>Adopted_Value_Per_SqFt__c * Land_Measurement_total_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Land Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>