force-app/main/default/objects/Property__c/fields/Valuation_Market_Value_Per_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Market_Value_Per_SqFt__c</fullName>
    <label>Valuation Market Value Per(SqFt)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>