force-app/main/default/objects/Property__c/fields/Valuation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Remarks__c</fullName>
    <label>Valuation Remarks</label>
    <type>TextArea</type>
</CustomField>