force-app/main/default/objects/Property__c/fields/Value_per_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Value_per_sq_ft__c</fullName>
    <label>Land Area Value Per Sq Ft</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>