force-app/main/default/objects/Property__c/fields/West_by__c.field-meta.xml
<CustomField>
    <fullName>West_by__c</fullName>
    <label>West by</label>
    <length>80</length>
    <type>Text</type>
</CustomField>