force-app/main/default/objects/Property__c/fields/West_By_Land_Physical__c.field-meta.xml
<CustomField>
    <fullName>West_By_Land_Physical__c</fullName>
    <label>West By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>