force-app/main/default/objects/Property__c/fields/West_By_Same_As_Document__c.field-meta.xml
<CustomField>
    <fullName>West_By_Same_As_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>West By Same As Document</label>
    <type>Checkbox</type>
</CustomField>