force-app/main/default/objects/Property__c/fields/WidthSq_ft__c.field-meta.xml
<CustomField>
    <fullName>WidthSq_ft__c</fullName>
    <label>Width(Sq Ft)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>