force-app/main/default/objects/Property__c/recordTypes/AC_Property_Detail.recordType-meta.xml
<RecordType>
    <fullName>AC_Property_Detail</fullName>
    <active>true</active>
    <label>AC Property Detail</label>
</RecordType>