force-app/main/default/objects/Property__c/recordTypes/FIV_B_Property_Detail.recordType-meta.xml
<RecordType>
    <fullName>FIV_B_Property_Detail</fullName>
    <active>true</active>
    <label>FIV-B Property Detail</label>
</RecordType>