force-app/main/default/objects/Property__c/recordTypes/FIV_C_Property_Detail.recordType-meta.xml
<RecordType>
    <fullName>FIV_C_Property_Detail</fullName>
    <active>true</active>
    <label>FIV-C Property Detail</label>
</RecordType>