force-app/main/default/objects/Property__c/recordTypes/Lead_Detail.recordType-meta.xml
<RecordType>
    <fullName>Lead_Detail</fullName>
    <active>true</active>
    <label>Lead Detail</label>
</RecordType>