force-app/main/default/objects/Property__c/recordTypes/Legal_Approval.recordType-meta.xml
<RecordType>
    <fullName>Legal_Approval</fullName>
    <active>true</active>
    <label>Legal Approval</label>
</RecordType>