force-app/main/default/objects/Property__c/recordTypes/Online_EC_Property_Detail.recordType-meta.xml
<RecordType>
    <fullName>Online_EC_Property_Detail</fullName>
    <active>true</active>
    <label>Online EC Property Detail</label>
</RecordType>